<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="dev.terrylabs.gitdoit.feature.StatisticActivity"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".feature.StatisticActivity">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repository Name"
                android:gravity="center_horizontal"
                android:background="@color/colorWhite"
                android:textSize="20sp"
                android:textColor="@color/textNormal"/>

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repository Full Name"
                android:gravity="center_horizontal"
                android:background="@color/colorWhite"
                android:textSize="14sp"
                android:textColor="@color/textLight"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="@{activity::onBackClick}"
            android:src="@drawable/baseline_arrow_back_black_48"
            android:background="@color/transparent"/>

        <com.loopeer.shadow.ShadowView
            android:id="@+id/layout_day_statistic"
            android:layout_below="@+id/layout_title"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            app:shadowColor="#38000000"
            app:shadowMargin="10dp"
            app:shadowRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_cate_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/cate_day"/>

                <TextView
                    android:id="@+id/tv_cate_sub_day"
                    android:layout_below="@+id/tv_cate_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textStyle="normal"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/cate_sub_day"/>

                <LinearLayout
                    android:id="@+id/layout_day_title"
                    android:layout_below="@+id/tv_cate_sub_day"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorWhite">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/sun"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/mon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/tue"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/wed"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/thu"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/fri"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/sat"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_val_day"
                    android:layout_below="@+id/layout_day_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorWhite">

                    <TextView
                        android:id="@+id/tv_day_val_sun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_day_val_mon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_day_val_tue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_day_val_wed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_day_val_thu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_day_val_fri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_day_val_sat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>
                </LinearLayout>

                <org.eazegraph.lib.charts.BarChart
                    android:layout_below="@+id/layout_val_day"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bar_chart_day"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    app:egShowValues="false"
                    app:egShowDecimal="false"
                    app:egBarWidth="12dp"
                    app:egLegendTextSize="0dp"
                    app:egLegendColor="@color/transparent"
                    app:egLegendHeight="0dp"/>

            </RelativeLayout>

        </com.loopeer.shadow.ShadowView>

        <com.loopeer.shadow.ShadowView
            android:id="@+id/layout_hour_statistic"
            android:layout_below="@+id/layout_day_statistic"
            android:layout_marginTop="20dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            app:shadowColor="#38000000"
            app:shadowMargin="10dp"
            app:shadowRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_cate_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/cate_hour"/>

                <TextView
                    android:id="@+id/tv_cate_sub_hour"
                    android:layout_below="@+id/tv_cate_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textStyle="normal"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/cate_sub_day"/>

                <LinearLayout
                    android:id="@+id/layout_hour_title"
                    android:layout_below="@+id/tv_cate_sub_hour"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorWhite">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/hour_range_1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/hour_range_2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/hour_range_3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/textNormal"
                        android:text="@string/hour_range_4"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_val_hour"
                    android:layout_below="@+id/layout_hour_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorWhite">

                    <TextView
                        android:id="@+id/tv_hour_val_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_hour_val_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_hour_val_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>

                    <TextView
                        android:id="@+id/tv_hour_val_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/textNormal"
                        android:text="0"/>
                </LinearLayout>

                <org.eazegraph.lib.charts.BarChart
                    android:layout_below="@+id/layout_val_hour"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bar_chart_hour"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    app:egShowValues="false"
                    app:egShowDecimal="false"
                    app:egBarWidth="12dp"
                    app:egLegendTextSize="0dp"
                    app:egLegendColor="@color/transparent"
                    app:egLegendHeight="0dp"/>

            </RelativeLayout>

        </com.loopeer.shadow.ShadowView>


    </RelativeLayout>
</layout>